# StarterLibRCSC

./: .gitignore  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  librcsc-config.in  setup.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
example/: Makefile.in
rcsc/: Makefile.am  Makefile.in
rcsc/action/: Makefile.am  Makefile.in  body_smart_kick.cpp
rcsc/ann/: Makefile.in
rcsc/coach/: Makefile.in
rcsc/common/: Makefile.in  player_type.cpp  player_type.h  server_param.cpp  server_param.h
rcsc/formation/: Makefile.am  Makefile.in  formation.cpp
rcsc/geom/: Makefile.in
rcsc/geom/triangle/: Makefile.in
rcsc/gz/: Makefile.in
rcsc/monitor/: Makefile.in
rcsc/net/: Makefile.in
rcsc/param/: Makefile.in
rcsc/player/: Makefile.in  player_agent.cpp  player_agent.h  self_intercept_v13.cpp
rcsc/rcg/: Makefile.in
rcsc/time/: Makefile.in
rcsc/trainer/: Makefile.in
rcsc/util/: Makefile.in
src/: Makefile.in
